@@ -8,7 +8,7 @@
   <tr align="center" bgcolor="#e4e4e4">
     <td>
       <h1><big><font color="#3c34ec"><i>NuttX RTOS</i></font></big></h1>
-      <p>Last Updated: April 25, 2012</p>
+      <p>Last Updated: May 8, 2012</p>
     </td>
   </tr>
 </table>
@@ -1846,7 +1846,8 @@
         The NuttX6.16 release also includes and logic for saving/restoring F4 FPU registers in context switches.
         Networking intensions include support for Telnet NSH sessions and new configurations for DHPCD and the networking test (nettest).
         A more complete port would include support for SDIO and USB OTG which are not available in NuttX 6.13.
-        The USB OTG device controller driver and function I2C driver were added in NuttX 6.17.
+        The USB OTG device controller driver, and LCD driver and a function I2C driver were added in NuttX 6.17.
+        A touchscreen driver for the STM3240G-EVAL based on the STMPE11 I/O expander was added in NuttX 6.18.
       </p>
     </ul>
   </td>
